<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.fh_muenster.noobApp.CategorySelectionActivity">

    <item
        android:id="@+id/action_neueLoc"
        android:title="@string/menu_neueLoc"
        android:orderInCategory="100"
        android:onClick="clickFuncNewLocation" app:showAsAction="never" />

    <item
        android:id="@+id/action_kontoverw"
        android:title="@string/menu_kontoverw"
        android:orderInCategory="100"
        android:onClick="clickFuncUserDetails" app:showAsAction="never" />

    <item
        android:id="@+id/action_ausloggen"
        android:title="@string/menu_ausloggen"
        android:orderInCategory="100"
        android:onClick="clickFuncLogout" app:showAsAction="never" />

</menu>
