<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"


    tools:context="de.fh_muenster.noobApp.NewLocationActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText9"
        android:maxLength="22"
        android:singleLine="true"
        android:hint="@string/new_location_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText10"
        android:inputType="textMultiLine"
        android:lines="4"
        android:minLines="4"
        android:maxLines="10"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:background="@drawable/pictureshape"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignLeft="@+id/button14"
        android:layout_alignStart="@+id/button14"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_location_bild"
        android:onClick="pickPhoto"
        android:id="@+id/button13"
        android:layout_below="@+id/button8"
        android:layout_marginTop="4dp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="270dp"
        android:layout_height="180dp"
        android:scaleType="fitCenter"
        android:id="@+id/imageView4"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/editText10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:singleLine="true"
        android:maxLength="255"
        android:hint="@string/new_location_ort"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/spinner2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText11"
        android:hint="@string/new_location_plz"
        android:inputType="number"
        android:singleLine="true"
        android:maxLength="5"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText21"
        android:layout_alignEnd="@+id/editText21" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText18"
        android:singleLine="true"
        android:maxLength="255"
        android:hint="@string/new_location_street"
        android:layout_below="@+id/editText"
        android:layout_marginTop="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText11"
        android:layout_alignEnd="@+id/editText11" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText21"
        android:singleLine="true"
        android:maxLength="255"
        android:hint="@string/new_location_nr"
        android:layout_below="@+id/editText18"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_location_anlegen"
        android:id="@+id/button15"
        android:layout_below="@+id/editText21"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_location_camera"
        android:id="@+id/button8"
        android:onClick="startKamera"
        android:layout_below="@+id/imageView4"
        android:layout_alignLeft="@+id/button13"
        android:layout_alignStart="@+id/button13"
        android:layout_marginTop="4dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_location_delete"
        android:id="@+id/button14"
        android:layout_below="@+id/button13"
        android:layout_alignLeft="@+id/button13"
        android:layout_alignStart="@+id/button13"
        android:layout_marginTop="4dp"
        android:onClick="deletePicture"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_location_category"
        android:id="@+id/textView2"
        android:layout_below="@+id/button14"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_location_desc"
        android:id="@+id/textView3"
        android:layout_below="@+id/editText9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp" />


</RelativeLayout>
</ScrollView>