<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.fh_muenster.noobApp.LocationAddImage" >

    <Button
        style="@style/noob_button_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_location_add_image_auswahl"
        android:id="@+id/button17"
        android:layout_marginTop="44dp"
        android:onClick="clickFuncImageFromFile"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/noob_button_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_location_add_image_kamera"
        android:id="@+id/button19"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/button17"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_marginTop="15dp"
        android:scaleType="centerCrop"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_below="@+id/textView16" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_location_add_image_upload"
        android:id="@+id/button20"
        android:onClick="clickFuncUpload"
        android:layout_below="@+id/imageView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/activity_location_add_image_vorschau"
        android:id="@+id/textView16"
        android:layout_below="@+id/button19"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:textSize="15sp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_location_add_image_drehen"
        android:id="@+id/button21"
        android:layout_above="@+id/imageView5"
        android:layout_alignRight="@+id/imageView5"
        android:layout_alignEnd="@+id/imageView5"
        android:onClick="clickFuncRotate"/>
</RelativeLayout>
